# lumen

./: README.md  dune-project  lumen.opam
lib/: camera.ml  color.ml  dune  hittable.ml  ppm.ml  ray.ml  shapes.ml  vec.ml  view.ml
test/: dune  test_vec.ml
